hphp/test/zend/good/ext/standard/tests/math/bindec_error.php.expectf
*** Testing bindec() : error conditions ***
Incorrect number of arguments

Warning: bindec() expects exactly 1 parameter, 0 given in %s/bindec_error.php on line 19

Warning: bindec() expects exactly 1 parameter, 2 given in %s/bindec_error.php on line 20
Incorrect input

Catchable fatal error: Object of class classA could not be converted to string in %s/bindec_error.php on line 23
